--- a/contact.html
+++ b/contact.html
@@ -39,50 +39,67 @@
         </nav>
 
     </header>
-    <div class="contenedor">
-        <div class="izquierda">
-            <h2>Contactanos</h2>
-            <form action="/action_page.php" class="formulario">
-                <div class="mb-3 mt-3">
-                    <label for="name" class="form-label">Name:</label>
-                    <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
+    <section>
+        <div class="contenedor">
+            <div class="izquierda">
+                <h2>Contactanos</h2>
+                <form action="https://formsubmit.co/navil.cacerez@unitec.edu" method="post" class="formulario"
+                    id="formulario">
+                    <div class="mb-3 mt-3">
+                        <label for="name" class="form-label">Name:</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email:</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                    </div>
+                    <div class="mb-3 mt-3">
+                        <label for="comment">Comments:</label>
+                        <textarea class="form-control" rows="5" id="comment" name="Comentario"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/contact.html">
+                    <input type="hidden" name="_captcha" value="false">
+                </form>
+            </div>
+            <div class="derecha">
+                <div class="contenido-textos">
+                    <h3>Infonet</h3>
+                    <p>IINFONET
+                        «Connect to the Future with INFONET: Your Gateway to Excellence in Telecommunications.»</p>
                 </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                </div>
-                <div class="mb-3 mt-3">
-                    <label for="comment">Comments:</label>
-                    <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+
+            </div>
         </div>
-        <div class="derecha">
-            <div class="contenido-textos">
-                <h3>Infonet</h3>
-                <p>Lorem ips
-                    consequuntur aperiam minima sed dicta odit numquam sapiente quam eum, architecto animi pariatur,
-                    velit doloribus laboriosam ut.</p>
+    </section>
+    <section>
+        <div id="marco">
+            <div id="map"></div>
+            <div class="derecha">
+                <div class="contenido-textos">
+                    <h3>Infonet</h3>
+                    <p>
+                        Residencial Santa Monica, bloque 3 casa #28 <br>Telefono Fijo: 2553-8934 <br> correo:
+                        ventas@infonethn.com
+                    </p>
+                </div>
+
             </div>
 
         </div>
-    </div>
-
-
-    <section>
-        <div id="map"></div>
 
     </section>
+
     <footer>
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Phone</h4>
-                <p>822323296312</p>
+                <p>2553-8934
+                </p>
             </div>
             <div class="content-foo">
                 <h4>Email</h4>
-                <p>infonet@infonet.com</p>
+                <p>ventas@infonethn.com</p>
             </div>
             <div class="content-foo">
                 <h4>Location</h4>
